# cybergator

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  neo4j.conf  pyproject.toml  tempCodeRunnerFile.py  test_neo4j.py  test_neo4j_queries.py  tree_structure.py
.github/workflows/: deploy.yml  pipeline.yml
app/: db.py
app/controllers/: auth_controller.py  cve_controller.py  graph_controller.py  neo4j_controller.py  nodes_controller.py  resilience_controller.py  software_controller.py  sue_graph_controller.py  system_tables_controller.py
app/data-jsons/: nodes_complete.json
app/data/backup/: Fuzzy_Set.json  Nodes_Complete.json  Risk_Factors.json  hardware_inventory_nodes.xlsx  software_inventory.csv
app/data/csv/: nvd_results2.csv  software_inventory_nodes.xlsx
app/data/json/: Attack_Tree.json  Critical_Functions.json  Nodes_Complete.json  Risk_Factors.json  nvd_results.json  racks.json  software_cves.json
app/databases/: in_memory_db.py  neo4j_db.py  psql_db.py
app/models/: user_model.py
app/repositories/: user_repo.py
app/services/: auth_service.py  constraints.py  cve_service.py  cvss_service.py  data_loader.py  edge_service.py  fsm_simulation.py  graph_service.py  neo4j_graph_service.py  neo4j_importer.py  node_service.py  resilience_score_calculator.py  sue_graph_service.py
app/utils/: generate_sue_graph.py
app/views/: dash_setup.py
app/views/callbacks/: auth_callbacks.py  cve_sim_callbacks.py  cve_simulation_callbacks.py  edge_callbacks.py  export_callbacks.py  graph_callbacks.py  neo4j_callbacks.py  node_callbacks.py  resilience_callbacks.py  software_unique_callbacks.py  (+2 more)
application/controllers/: auth_controller.py
application/repositories/: user_repo.py
application/services/: auth_service.py
application/views/: dash_setup.py
assets/: attack_tree_logical.html  attack_tree_render.html  attack_tree_system_mapping.html  custom.css
(+47 files in other folders)
