[project]
name = "cybergator"
version = "0.1.0"
description = "CyberGator: Cyber Resilience Assessment and Mitigation Tool"
authors = [
    {name = "Jessica Lourenco",email = "j.tosteslourenco@ufl.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash (>=2.18.2,<3.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "dash-cytoscape (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "cybergator" }]