[project]
name = "cybergator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = ["python-dotenv (>=1.0.1,<2.0.0)", "dash (>=2.18.2,<3.0.0)", "psycopg2 (>=2.9.10,<3.0.0)", "neo4j (>=5.28.1,<6.0.0)", "bcrypt (>=4.2.1,<5.0.0)", "flask (>=3.0,<4.0)", "flask-cors (>=5.0.1,<6.0.0)", "dash-bootstrap-components (>=1.7.1,<2.0.0)", "coverage (>=7.6.12,<8.0.0)", "networkx (>=3.4.2,<4.0.0)", "matplotlib (>=3.10.1,<4.0.0)", "plotly (>=6.0.0,<7.0.0)", "dash-cytoscape (>=1.0.2,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"